--- a/Assets/Css/login.css
+++ b/Assets/Css/login.css
@@ -160,6 +160,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     height: 400px;
+    width: 50%;
 }
 
 /* Floating Placeholder Styles */
